# partition_eval

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  generate_grpc.sh
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
scirpts/: generate_grpc.sh
scripts/: generate_grpc.sh  remote.sh
source/: eval.cpp  lib.cpp  main.cpp  partition.cpp  partition.hpp
source/embed_server/: CMakeLists.txt  client_main.cpp  embed_client.cpp  embed_client.hpp  embed_server.cpp  embed_server.hpp  infer_client.cpp  infer_client.hpp  infer_server.cpp  infer_server.hpp  inner_embed.cpp  inner_embed.hpp  main.cpp
source/eval/: CMakeLists.txt  eval.hpp  main.cpp  partition.cpp  partition.hpp
source/merge/: CMakeLists.txt  main.cpp  merger.cpp  merger.hpp
source/proto/: embed_server.proto  inference_request.proto  partial_result.proto
source/query/: CMakeLists.txt  main.cpp
source/utils/: CMakeLists.txt  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/source/: eval_test.cpp
